<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Controle de Presencas</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_logo">SGP</string>
    <string name="text_usuario">Usuário</string>
    <string name="text_senha">Senha</string>
    <string name="text_logar">Entrar</string>
    <string name="text_tipo_usuario">Tipo</string>
    <string name="text_iniciar_aula">Iniciar Aula</string>
    <string name="title_activity_activity_principal">Controle de Presencas</string>
    <string name="text_nome">Nome</string>
    <string name="text_turma">Turma:</string>
    <string name="text_tempo_aula">Tempo de Aula</string>
    <string name="text_encerrar_aula">Encerrar Aula</string>
    <string name="title_activity_activity_aula">Aula</string>
    <string name="text_consultar_turma">Consultar Turma</string>
    <string name="text_atualizar_tela">Atualizar Tela</string>
    <string name="text_em_aula">Em aula</string>
    <string name="title_activity_activity_alterar_presencas">Alteração de Presenças</string>
    <string name="title_activity_activity_prof_cons_aluno_turma">Consulta de Aluno</string>
    <string name="text_selecione_aluno">Selecione o Aluno</string>
    <string name="text_data">00/00/00</string>
    <string name="title_activity_relatorio_final_aula">ActivityRelatorioFinalAula</string>
    <string name="text_percentagem_presencas">prescentagem</string>
    <string name="text_nome_turma">Turma</string>
    <string name="text_tempo_tick">Tempo de Ticks</string>
    <string name="text_porc_val_aula">Porc. Presenca (%)</string>
    <!-- Tempo do Tick em minutos... -->
    <string name="text_default_tempo_tick">10</string>
    <!-- Porcentagem de Validação da Aula... -->
    <string name="text_default_porc_val_aula">75</string>
    <string name="text_nome_disciplina">Disciplina</string>
	<string name="text_nome_aluno">Nome Aluno</string>
    <string-array name="array_spinner">
        <item>Fulano</item>
        <item>beltrano</item>
        <item>Cicrano</item>
    </string-array>

    <string name="title_activity_activity_aluno_cons_presencas">Presencas do Aluno</string>

</resources>
