<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A83C9"
    android:orientation="vertical"
    tools:context="com.example.controledepresencas.ActivityProfConsAlunoTurma" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >
			
            <TextView
                android:id="@+id/textViewNomeDisciplina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nome_disciplina"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center" />
            
            <TextView
                android:id="@+id/textViewTurma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_turma"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold|italic" />
            
            <TextView
                android:id="@+id/textViewSelecioneAluno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_selecione_aluno"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp" />
            
			<Spinner
			    android:id="@+id/spinnerAlunos"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginEnd="30dp"
			    android:layout_marginStart="30dp"
			    android:background="#FFFFFF"
			    android:entries="@array/array_spinner"
			    android:textSize="18sp" />
                     
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageViewProfessorAluno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/text_tipo_usuario"
                android:src="@drawable/aluno" >
            </ImageView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:gravity="center|top"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/listViewPresencas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF" >
            
        </ListView>

    </LinearLayout>

</LinearLayout>
