<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A83C9"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.controledepresencas.ActivityLogin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_logo"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="129dp"
            android:layout_height="129dp"
            android:src="@drawable/logo_principal" >
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewUsuario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/text_usuario"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextUsuario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="Joao"
            android:textColor="#000000"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textViewSenha"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/text_senha"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextSenha"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="12345"
            android:textColor="#000000"
            android:textSize="22sp" />

        <Button
            android:id="@+id/buttonLogar"
            android:layout_width="fill_parent"
            android:layout_height="29dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:background="#3FB041"
            android:onClick="onClickLogar"
            android:text="@string/text_logar"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end" >

        <ImageButton
            android:id="@+id/imgButtonSair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickSairAplicativo"
            android:src="@drawable/sair" />
    </LinearLayout>

</LinearLayout>
<!-- " -->
